<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/updateTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left"
            android:maxLines="1"
            android:text="@string/updateTime" />

        <TextView
            android:id="@+id/currency"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:maxLines="1"
            android:text="@string/currency" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/emptyLabel"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:gravity="right"
            android:maxLines="1"
            android:padding="6dp"
            android:text="" />

        <TextView
            android:id="@+id/saleLabel"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:padding="6dp"
            android:text="@string/sellLabel"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/buyLabel"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:padding="6dp"
            android:text="@string/buyLabel"
            android:textSize="22sp" />
    </LinearLayout>
    
    <View
        android:id="@+id/labelSeparator"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"
        />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_data"
        android:textSize="25sp" />

</LinearLayout>